--- a/clusters/view/cluster-config/values/tap-values.yaml
+++ b/clusters/view/cluster-config/values/tap-values.yaml
@@ -16,15 +16,15 @@ tap_install:
       service_type: ClusterIP
       app_config:
         app:
-          baseUrl: http://tap-gui.tap.raltaf.io
+          baseUrl: https://tap-gui.view.tap.raltaf.io
         catalog:
           locations:
             - type: url
               target: https://github.com/pakiheart/yel-catalog/blob/main/catalog-info.yaml
         backend:
-          baseUrl: http://tap-gui.tap.raltaf.io
+          baseUrl: https://tap-gui.view.tap.raltaf.io
           cors:
-            origin: http://tap-gui.tap.raltaf.io
+            origin: https://tap-gui.view.tap.raltaf.io
 
     appliveview:
       ingressEnabled: true
