--- a/ns-provisioner/desired-namespaces.yaml
+++ b/ns-provisioner/desired-namespaces.yaml
@@ -4,5 +4,5 @@ namespaces:
 #! The only required parameter is the name of the namespace. All additional values provided here 
 #! for a namespace will be available under data.values for templating additional sources
 - name: dev
-  # scanpolicies: ["lax-scan-policy"]
-  # pipelines: ["java"]
+  #! scanpolicies: ["lax-scan-policy"]
+  #! pipelines: ["java"]
