--- a/additional_resources/tekton-pipelines-java.yaml
+++ b/additional_resources/tekton-pipelines-java.yaml
@@ -9,11 +9,11 @@ kind: Pipeline
 metadata:
   name: developer-defined-tekton-pipeline
   labels:
-    apps.tanzu.vmware.com/pipeline: test     # (!) required
+    apps.tanzu.vmware.com/pipeline: test    
 spec:
   params:
-    - name: source-url                       # (!) required
-    - name: source-revision                  # (!) required
+    - name: source-url                       
+    - name: source-revision                  
   tasks:
     - name: test
       params:
