--- a/additional_resources/image_and_source-scan-policy.yaml
+++ b/additional_resources/image_and_source-scan-policy.yaml
@@ -7,7 +7,7 @@
 apiVersion: scanning.apps.tanzu.vmware.com/v1beta1
 kind: ScanPolicy
 metadata:
-  name: image-scan-policy
+  name: scan-policy
   labels:
     app.kubernetes.io/part-of: scan-system #! This label is required to have policy visible in tap-gui, but the value can be anything
 spec:
@@ -15,8 +15,8 @@ spec:
     package main
 
     # Accepted Values: "Critical", "High", "Medium", "Low", "Negligible", "UnknownSeverity"
-    notAllowedSeverities := ["Critical","High","UnknownSeverity"]
-
+    notAllowedSeverities := [""]
+    
     # List of acceptable risks.  Must specify the rationale, subjective risk level, and expiration date.  Example:
     # {
     #   "cve": "GHSA-36p3-wjmg-h94x",
@@ -30,50 +30,104 @@ spec:
     #   "cve": "CVE-2016-1000027",
     #   "rationale": "The hello application source has been reviewed and code paths analyzed.  Spring team does not intend to change this and disputes its rating.  Security team has agreed to ignore. https://nvd.nist.gov/vuln/detail/CVE-2016-1000027",
     #   "subjectiveRiskLevel": "Low",
-    #   "expiration": "2022-Dec-31"
+    #   "expiration": "2022-Feb-28"
     # }
     acceptableRiskCves := [
       {
-        "cve": "CVE-2021-43877",
-        "rationale": "Microsoft has not released as fix since reported.  Nothing we can do.  Security team has agreed to ignore. https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-43877",
-        "subjectiveRiskLevel": "High",
-        "expiration": "2023-Mar-31"
+        "cve": "CVE-2016-0949",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
       },
       {
-        "cve": "GHSA-8f7f-vqg5-jrv9",
-        "rationale": "Microsoft has not released as fix since reported.  Nothing we can do. This is a Demo microservice.",
-        "subjectiveRiskLevel": "High",
-        "expiration": "2023-Mar-31"
+        "cve": "CVE-2017-11291",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
       },
       {
-        "cve": "GHSA-7jgj-8wvc-jh57",
-        "rationale": "Microsoft has not released as fix since reported.  Nothing we can do. This is a Demo microservice.",
-        "subjectiveRiskLevel": "High",
-        "expiration": "2023-Mar-31"
+        "cve": "CVE-2018-12804",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
       },
       {
-        "cve": "GHSA-5f2m-466j-3848",
-        "rationale": "Microsoft has not released as fix since reported.  Nothing we can do. This is a Demo microservice.",
-        "subjectiveRiskLevel": "High",
-        "expiration": "2023-Mar-31"
+        "cve": "CVE-2018-12805",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
       },
       {
-        "cve": "GHSA-xhfc-gr8f-ffwc",
-        "rationale": "Microsoft has not released as fix since reported.  Nothing we can do. This is a Demo microservice.",
-        "subjectiveRiskLevel": "High",
-        "expiration": "2023-Mar-31"
+        "cve": "CVE-2018-4923",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
       },
       {
-        "cve": "GHSA-cmhx-cq75-c4mj",
-        "rationale": "Microsoft has not released as fix since reported.  Nothing we can do. This is a Demo microservice.",
-        "subjectiveRiskLevel": "High",
-        "expiration": "2023-Mar-31"
+        "cve": "CVE-2021-40719",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
       },
       {
-        "cve": "CVE-2023-0286",
-        "rationale": "Demo app. Additional research needed - https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2023-0286",
-        "subjectiveRiskLevel": "High",
-        "expiration": "2023-Mar-31"
+        "cve": "CVE-2016-0948",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2016-4118",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2017-3101",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2018-4994",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2020-5674",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2021-21085",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2017-18589",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2006-5318",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "CVE-2014-9488",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
+      },
+      {
+        "cve": "GHSA-hrpp-h998-j3pp",
+        "rationale": "I don't know how to fix and this is a demo app.",
+        "subjectiveRiskLevel": "Unknown",
+        "expiration": "2022-Feb-28"
       }
     ]
 
