--- a/clusters/view/cluster-config/values/tap-values.yaml
+++ b/clusters/view/cluster-config/values/tap-values.yaml
@@ -29,3 +29,8 @@ tap_install:
 
     appliveview:
       ingressEnabled: true
+
+    metadata_store:
+      ingress_enabled: "true"
+      app_service_type: "ClusterIP"
+      ns_for_export_app_cert: "*"  
