--- a/clusters/view/cluster-config/values/tap-values.yaml
+++ b/clusters/view/cluster-config/values/tap-values.yaml
@@ -14,6 +14,7 @@ tap_install:
           type: LoadBalancer # NodePort can be used if your Kubernetes cluster doesn't support LoadBalancing.
 
     tap_gui:
+      metadataStoreAutoconfiguration: true
       service_type: ClusterIP
       app_config:
         app:
