--- a/clusters/ra-tap-cluster/cluster-config/values/tap-values.yaml
+++ b/clusters/ra-tap-cluster/cluster-config/values/tap-values.yaml
@@ -6,7 +6,7 @@ tap_install:
 
     shared:
       ingress_domain: view.tap.raltaf.io
-      ingress_issuer: letsencrypt-production
+#      ingress_issuer: letsencrypt-production
       
     contour:
       envoy:
