--- a/clusters/view/cluster-config/values/tap-gui-cert-eso-values.yaml
+++ b/clusters/view/cluster-config/values/tap-gui-cert-eso-values.yaml
@@ -1,15 +1,16 @@
 ---
-secrets:
-  eso:
-    aws:
-      region: us-west-2
-      tanzu_sync_secrets:
-        role_arn: arn:aws:iam::375783000519:role/ra-tap-view--tanzu-sync-secrets
-    remote_refs:
-      tap_gui_cert:
-        tls.crt:
-          key: dev/ra-tap-view/tap/tap-gui-cert-values
-          property: tls.crt
-        tls.key:
-          key: dev/ra-tap-view/tap/tap-gui-cert-values
-          property: tls.crt
+tap_install:
+  secrets:
+    eso:
+      aws:
+        region: us-west-2
+        tanzu_sync_secrets:
+          role_arn: arn:aws:iam::375783000519:role/ra-tap-view--tanzu-sync-secrets
+      remote_refs:
+        tap_gui_cert:
+          tls.crt:
+            key: dev/ra-tap-view/tap/tap-gui-cert-values
+            property: tls.crt
+          tls.key:
+            key: dev/ra-tap-view/tap/tap-gui-cert-values
+            property: tls.crt
