--- a/clusters/view/cluster-config/values/tap-gui-cert-eso-values.yaml
+++ b/clusters/view/cluster-config/values/tap-gui-cert-eso-values.yaml
@@ -4,7 +4,7 @@ tap_install:
     eso:
       aws:
         region: us-west-2
-        tanzu_sync_secrets:
+        tap_install_secrets:
           role_arn: arn:aws:iam::375783000519:role/ra-tap-view--tanzu-sync-secrets
       remote_refs:
         tap_gui_cert:
