--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
@@ -4,7 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: tap-gui-cert
-  namespace: default
+  namespace: tap-install
   annotations:
     kapp.k14s.io/change-group: eso/tap-gui-cert
     kapp.k14s.io/change-rule.0: "upsert after upserting eso/secretstore"
