--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
@@ -15,6 +15,6 @@ spec:
   refreshInterval: "1m"
   data:
     - secretKey: tls.crt
-      remoteRef:  "{{ #@ data.values.tap_install.secrets.eso.remote_refs.tap_gui_cert.tls_crt | pkcs12cert }}"
+      remoteRef:  #@ data.values.tap_install.secrets.eso.remote_refs.tap_gui_cert.tls_crt
     - secretKey: tls.key
-      remoteRef: "{{ #@ data.values.tap_install.secrets.eso.remote_refs.tap_gui_cert.tls_key | pkcs12key }}"
+      remoteRef: #@ data.values.tap_install.secrets.eso.remote_refs.tap_gui_cert.tls_key
