--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
@@ -4,7 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: tap-gui-cert
-  namespace: tap-install
+  namespace: default
   annotations:
     kapp.k14s.io/change-group: eso/tap-gui-cert
     kapp.k14s.io/change-rule.0: "upsert after upserting eso/secretstore"
@@ -15,19 +15,6 @@ spec:
   refreshInterval: "1m"
   data:
     - secretKey: tls.crt
-      remoteRef:  
-        key: dev/ra-tap-view/tap/tap-gui-cert-values
-        property: tls.crt
+      remoteRef:  #@ data.values.tap_install.secrets.eso.remote_refs.tap_gui_cert.tls_crt
     - secretKey: tls.key
-      remoteRef: 
-        key: dev/ra-tap-view/tap/tap-gui-cert-values
-        property: tls.key
-
-  target:
-    name: tap-gui-cert
-    creationPolicy: Owner
-    template:
-      type: kubernetes.io/tls
-      data:
-        tls.crt: "{{ .tls.crt }}"
-        tls.key: "{{ .tls.key }}"
+      remoteRef: #@ data.values.tap_install.secrets.eso.remote_refs.tap_gui_cert.tls_key
