--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export.yaml
@@ -8,9 +8,7 @@ kind: SecretExport
 metadata:
   name: tap-gui-cert
   namespace: tap-install
-  annotations:
-    kapp.k14s.io/change-group: pkgr
 spec:
   toNamespaces:
-  - default
+  - "default"
 
