--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export.yaml
@@ -12,3 +12,13 @@ spec:
   toNamespaces:
   - "default"
 
+---
+apiVersion: secretgen.carvel.dev/v1alpha1
+kind: SecretImport
+metadata:
+  name: tap-gui-cert
+  namespace: default
+spec:
+  fromNamespaces:
+  - "tap-install"
+
