--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export-import.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export-import.yaml
@@ -10,7 +10,7 @@ metadata:
   namespace: tap-install
 spec:
   toNamespaces:
-  - "default"
+  - "tap-gui"
 
 ---
 apiVersion: secretgen.carvel.dev/v1alpha1
