--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export-import.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export-import.yaml
@@ -17,7 +17,7 @@ apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretImport
 metadata:
   name: tap-gui-cert
-  namespace: default
+  namespace: tap-gui
 spec:
   fromNamespace: tap-install
 
