--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export-import.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert-export-import.yaml
@@ -10,14 +10,14 @@ metadata:
   namespace: tap-install
 spec:
   toNamespaces:
-  - "default"
+  - "tap-gui"
 
 ---
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretImport
 metadata:
   name: tap-gui-cert
-  namespace: "default"
+  namespace: "tap-gui"
 spec:
   fromNamespace: tap-install
 
