--- a/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
+++ b/clusters/view/cluster-config/config/tap-install/.tanzu-managed/tap-gui-cert.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: tap-gui-cert
+  name: tap-gui-cert-rehan
   namespace: tap-install
   annotations:
     kapp.k14s.io/change-group: eso/tap-gui-cert
