--- a/clusters/view/cluster-config/values/tap-values.yaml
+++ b/clusters/view/cluster-config/values/tap-values.yaml
@@ -6,7 +6,7 @@ tap_install:
 
     shared:
       ingress_domain: view.tap.raltaf.io
-      ingress_issuer: letsencrypt-production
+      ingress_issuer: ""
       
     contour:
       envoy:
@@ -18,15 +18,15 @@ tap_install:
       service_type: ClusterIP
       app_config:
         app:
-          baseUrl: https://tap-gui.view.tap.raltaf.io
+          baseUrl: http://tap-gui.view.tap.raltaf.io
         catalog:
           locations:
             - type: url
               target: https://github.com/pakiheart/yel-catalog/blob/main/catalog-info.yaml
         backend:
-          baseUrl: https://tap-gui.view.tap.raltaf.io
+          baseUrl: http://tap-gui.view.tap.raltaf.io
           cors:
-            origin: https://tap-gui.view.tap.raltaf.io
+            origin: http://tap-gui.view.tap.raltaf.io
 
     appliveview:
       ingressEnabled: true
