--- a/clusters/view/cluster-config/values/tap-values.yaml
+++ b/clusters/view/cluster-config/values/tap-values.yaml
@@ -14,19 +14,23 @@ tap_install:
           type: LoadBalancer # NodePort can be used if your Kubernetes cluster doesn't support LoadBalancing.
 
     tap_gui:
+      tls:
+        namespace: default
+        secretName: tap-gui-cert-rehan
       metadataStoreAutoconfiguration: true
       service_type: ClusterIP
       app_config:
         app:
-          baseUrl: http://tap-gui.view.tap.raltaf.io
+          baseUrl: https://tap-gui.view.tap.raltaf.io
         catalog:
           locations:
             - type: url
               target: https://github.com/pakiheart/yel-catalog/blob/main/catalog-info.yaml
         backend:
-          baseUrl: http://tap-gui.view.tap.raltaf.io
+          baseUrl: https://tap-gui.view.tap.raltaf.io
           cors:
-            origin: http://tap-gui.view.tap.raltaf.io
+            origin: https://tap-gui.view.tap.raltaf.io
+        
 
     appliveview:
       ingressEnabled: true
