--- a/clusters/view/cluster-config/values/tap-values.yaml
+++ b/clusters/view/cluster-config/values/tap-values.yaml
@@ -34,8 +34,14 @@ tap_install:
 
     appliveview:
       ingressEnabled: true
+      tls:
+        namespace: default
+        secretName: tap-gui-cert-rehan
 
     metadata_store:
       ingress_enabled: "true"
       app_service_type: "ClusterIP"
-      ns_for_export_app_cert: "*"  
+      ns_for_export_app_cert: "*"
+      tls:
+        namespace: default
+        secretName: tap-gui-cert-rehan
