--- a/config/dev/tanzu-java-web-app/delivery.yml
+++ b/config/dev/tanzu-java-web-app/delivery.yml
@@ -10,6 +10,7 @@ metadata:
     app.kubernetes.io/part-of: tanzu-java-web-app
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
+    jeremy: stuff
     app.kubernetes.io/component: run
     carto.run/workload-name: tanzu-java-web-app
 spec:
