--- a/config/dev/tanzu-java-web-app/tanzu-java-web-app-dev-gitops-deliverable.yml
+++ b/config/dev/tanzu-java-web-app/tanzu-java-web-app-dev-gitops-deliverable.yml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/part-of: tanzu-java-web-app
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
-    jeremy: stuff
+    jeremy: stuff-run
     app.kubernetes.io/component: deliverable
     app.tanzu.vmware.com/deliverable-type: web
 spec:
