--- a/tanzu-java-web-app-workload.yaml
+++ b/tanzu-java-web-app-workload.yaml
@@ -6,6 +6,7 @@ metadata:
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: tanzu-java-web-app
     apps.tanzu.vmware.com/has-tests: "true"
+    apps.tanzu.vmware.com/test-run: "test"
 
 spec:
   params:
