--- a/test-run-supplychain.yml
+++ b/test-run-supplychain.yml
@@ -134,26 +134,7 @@ spec:
     name: api-descriptors
     templateRef:
       kind: ClusterConfigTemplate
-      name: api-descriptors
-  
-  - configs:
-    - name: config
-      resource: api-descriptors
-    name: create-deliverable
-    templateRef:
-      kind: ClusterConfigTemplate
-      name: config-deliverable-template
-  
-  - configs:
-    - name: config
-      resource: create-deliverable
-    name: write-deliverable
-    params:
-    - name: serviceAccount
-      value: default
-    templateRef:
-      kind: ClusterConfigTemplate
-      name: config-writer-deliverable-template      
+      name: api-descriptors    
   
   - configs:
     - name: config
@@ -168,8 +149,28 @@ spec:
         repository: tap-build/workloads
         server: registry.harbor.learn.tapsme.org
     templateRef:
-      kind: ClusterTemplate
-      name: config-writer-template
+      kind: ClusterConfigTemplate
+      name: config-writer-template-2
+
+  - configs:
+    - name: config
+      resource: config-writer
+    name: create-deliverable
+    templateRef:
+      kind: ClusterConfigTemplate
+      name: config-deliverable-template
+  
+  - configs:
+    - name: config
+      resource: create-deliverable
+    name: write-deliverable
+    params:
+    - name: serviceAccount
+      value: default
+    templateRef:
+      kind: ClusterConfigTemplate
+      name: config-writer-deliverable-template  
+
   selector:
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/test-run: "test"
