--- a/clusters/run/cluster-config/values/tap-values.yaml
+++ b/clusters/run/cluster-config/values/tap-values.yaml
@@ -27,16 +27,16 @@ tap_install:
           name: sync-git-ssh
           namespace: tanzu-sync
           #create_export: true
-      additional_sources:
-      - git:
-          url: ssh://git@github.com/pakiheart/tap-gitops
-          ref: origin/main
-          subPath: credentials
-          secretRef:
-            name: sync-git-ssh-2
-            namespace: tanzu-sync
-            create_export: true
-        path: _ytt_lib/workload-creds
+      # additional_sources:
+      # - git:
+      #     url: ssh://git@github.com/pakiheart/tap-gitops
+      #     ref: origin/main
+      #     subPath: credentials
+      #     secretRef:
+      #       name: sync-git-ssh-2
+      #       namespace: tanzu-sync
+      #       create_export: true
+      #   path: _ytt_lib/workload-creds
       # gitops_install:
       #   ref: origin/main
       #   subPath: ns-provisioner-base
