removed old, added inline ytt

--- a/clusters/run/cluster-config/config/tap-install/.tanzu-managed/deliverable-app-reconciler.yaml
+++ b/clusters/run/cluster-config/config/tap-install/.tanzu-managed/deliverable-app-reconciler.yaml
@@ -12,7 +12,17 @@ spec:
       secretRef: 
         name: sync-git-ssh
   template:
-  - ytt: {}
+  - ytt:
+    inline:
+      paths:
+        #@ load("@ytt:overlay", "overlay")
+        #@overlay/match by=overlay.all
+        ---
+        spec:
+          source:
+            git:
+              ref:
+                branch: prod
   deploy:
   - kapp:
       rawOptions:
