--- a/clusters/run/cluster-config/config/tap-install/.tanzu-managed/deliverable-app-reconciler.yaml
+++ b/clusters/run/cluster-config/config/tap-install/.tanzu-managed/deliverable-app-reconciler.yaml
@@ -15,14 +15,15 @@ spec:
   - ytt:
     inline:
       paths:
-        #@ load("@ytt:overlay", "overlay")
-        #@overlay/match by=overlay.all
-        ---
-        spec:
-          source:
-            git:
-              ref:
-                branch: prod
+        modify-branch.yml: |
+          #@ load("@ytt:overlay", "overlay")
+          #@overlay/match by=overlay.all
+          ---
+          spec:
+            source:
+              git:
+                ref:
+                  branch: prod
   deploy:
   - kapp:
       rawOptions:
