--- a/clusters/run/cluster-config/config/tap-install/.tanzu-managed/deliverable-app-reconciler.yaml
+++ b/clusters/run/cluster-config/config/tap-install/.tanzu-managed/deliverable-app-reconciler.yaml
@@ -13,11 +13,11 @@ spec:
         name: sync-git-ssh
   template:
   - ytt:
+    ignoreUnknownComments: true
     inline:
       paths:
         modify-branch.yml: |
           #@ load("@ytt:overlay", "overlay")
-          
           #@overlay/match by=overlay.all
           ---
           spec:
