--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -13,9 +13,9 @@ tap_install:
           type: LoadBalancer # NodePort can be used if your Kubernetes cluster doesn't support LoadBalancing.
 
     tap_gui:
-      tls:
-        namespace: default
-        secretName: tap-gui-cert-rehan
+      # tls:
+      #   namespace: default
+      #   secretName: tap-gui-cert-rehan
       metadataStoreAutoconfiguration: true
       service_type: ClusterIP
       app_config:
@@ -33,9 +33,9 @@ tap_install:
 
     appliveview:
       ingressEnabled: true
-      tls:
-        namespace: default
-        secretName: tap-gui-cert-rehan
+      # tls:
+      #   namespace: default
+      #   secretName: tap-gui-cert-rehan
 
     metadata_store:
       ingress_enabled: "true"
