--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -6,6 +6,7 @@ tap_install:
 
     shared:
       ingress_domain: view.tap.raltaf.io
+      ingress_issuer: letsencrypt-production
       
     contour:
       envoy:
