--- a/clusters/cg-build/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-build/cluster-config/values/tap-values.yaml
@@ -75,7 +75,7 @@ tap_install:
         secretRef:
           name: sync-git-ssh
           namespace: tanzu-sync
-          # create_export: true
+          create_export: true
       import_data_values_secrets:
       - name: tenant-secrets
         namespace: tap-install
