--- a/clusters/cg-view/cluster-config/post-install/lets-encrypt-cluster-issuers.yaml
+++ b/clusters/cg-view/cluster-config/post-install/lets-encrypt-cluster-issuers.yaml
@@ -13,3 +13,18 @@ spec:
       - http01:
           ingress:
             class: contour
+
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  namespace: cert-manager
+  name: tap-gui
+spec:
+  commonName: tap-gui.view.tap.raltaf.io
+  dnsNames:
+    - tap-gui.view.tap.raltaf.io
+  issuerRef:
+    name: letsencrypt-http01-issuer
+    kind: ClusterIssuer
+  secretName: tap-gui
