--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -14,9 +14,9 @@ tap_install:
           type: LoadBalancer # NodePort can be used if your Kubernetes cluster doesn't support LoadBalancing.
 
     tap_gui:
-      tls:
-        namespace: cert-manager
-        secretName: tap-gui
+      # tls:
+      #   namespace: cert-manager
+      #   secretName: tap-gui
       metadataStoreAutoconfiguration: true
       service_type: ClusterIP
       app_config:
@@ -34,14 +34,14 @@ tap_install:
 
     appliveview:
       ingressEnabled: true
-      tls:
-        namespace: cert-manager
-        secretName: tap-gui
+      # tls:
+      #   namespace: cert-manager
+      #   secretName: tap-gui
 
     metadata_store:
       ingress_enabled: "true"
       app_service_type: "ClusterIP"
       ns_for_export_app_cert: "*"
-      tls:
-        namespace: cert-manager
-        secretName: tap-gui
+      # tls:
+      #   namespace: cert-manager
+      #   secretName: tap-gui
