--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/sync-git-ssh-export-import.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/sync-git-ssh-export-import.yaml
@@ -4,6 +4,9 @@ kind: SecretExport
 metadata:
   name: sync-git-ssh
   namespace: tanzu-sync
+  annotations:
+    kapp.k14s.io/change-group: se/sync-git-ssh
+    kapp.k14s.io/change-rule.0: "upsert after eso/tap-sensitive-values"  
 spec:
   toNamespaces:
   - "*"
