--- a/clusters/cg-run/tanzu-sync/app/config/.tanzu-managed/sync-git-ssh-2.yaml
+++ b/clusters/cg-run/tanzu-sync/app/config/.tanzu-managed/sync-git-ssh-2.yaml
@@ -7,6 +7,8 @@ metadata:
   namespace: tanzu-sync
   annotations:
     kapp.k14s.io/change-group: tanzu-sync-secrets
+    kapp.k14s.io/change-rule.0: "upsert after upserting eso/secretstore"
+    kapp.k14s.io/change-rule.1: "delete before deleting eso/secretstore"    
 spec:
   secretStoreRef:
     name: tanzu-sync-secrets
