--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -5,7 +5,7 @@ tap_install:
     ceip_policy_disclosed: true # Installation fails if this is not set to true. Not a string.
 
     shared:
-      ingress_domain: view.tap.raltaf.io
+      ingress_domain: tapview.tap.raltaf.io
       ingress_issuer: letsencrypt-production
       
     contour:
@@ -21,15 +21,15 @@ tap_install:
       service_type: ClusterIP
       app_config:
         app:
-          baseUrl: https://tap-gui.view.tap.raltaf.io
+          baseUrl: https://tap-gui.tapview.tap.raltaf.io
         catalog:
           locations:
             - type: url
               target: https://github.com/pakiheart/yel-catalog/blob/main/catalog-info.yaml
         backend:
-          baseUrl: https://tap-gui.view.tap.raltaf.io
+          baseUrl: https://tap-gui.tapview.tap.raltaf.io
           cors:
-            origin: https://tap-gui.view.tap.raltaf.io
+            origin: https://tap-gui.tapview.tap.raltaf.io
         
 
     appliveview:
