remove overlay template

--- a/clusters/cg-iterate/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-iterate/cluster-config/values/tap-values.yaml
@@ -88,9 +88,9 @@ tap_install:
     - name: "ootb-supply-chain-testing-scanning"
       secrets: 
       - name: "ootb-supply-chain-overlay"
-    - name: "ootb-templates"
-      secrets: 
-      - name: "ootb-template-overlay"  
+    # - name: "ootb-templates"
+    #   secrets: 
+    #   - name: "ootb-template-overlay"  
 
     appliveview_connector:
       backend:
