--- a/clusters/cg-iterate/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-iterate/cluster-config/values/tap-values.yaml
@@ -8,44 +8,9 @@ tap_install:
       ingress_domain: iterate.tap.raltaf.io
       image_registry:  
         project_path: "registry.harbor.learn.tapsme.org/tap-build"
-    #supply_chain: basic
-    supply_chain: testing_scanning
-    #ootb_supply_chain_basic:
-    ootb_supply_chain_testing_scanning:
-      external_delivery: true
-      gitops:
-        # deliverable_repository_owner: "pakiheart"
-        # deliverable_repository_name: "tap-gitops-deliverable"
-        # deliverable_branch: main
-        # deliverable_server_address: "ssh://git@github.com"
-        ssh_secret: ""
-        # ssh_secret: "git-auth"
-        # server_address: "ssh://git@github.com"
-        # repository_owner: "pakiheart"
-        # repository_name: "tap-gitops-config"
-        # branch: main
-        # repository_prefix: git@github.com/tap-gitops/config-dir
-      # scanning:
-      #   image:
-      #     policy: lax-scan-policy
-      #   source:
-      #     policy: lax-scan-policy
-  
-    grype:
-      namespace: dev
-      targetImagePullSecret: "registries-credentials"
-      metadataStore:
-        url: "https://metadata-store.view.tap.raltaf.io"
-        caSecret:
-          name: store-ca-cert
-          importFromNamespace: metadata-store-secrets
-        authSecret:
-          name: store-auth-token
-          importFromNamespace: metadata-store-secrets
-
-    scanning:
-      metadataStore:
-        url: ""
+    supply_chain: basic
+    ootb_supply_chain_basic:
+   
 
     namespace_provisioner:
       controller: false
@@ -84,13 +49,6 @@ tap_install:
       - name: workload-git-ssh-overlay
         namespace: tap-install
         create_export: true
-    # package_overlays:
-    # - name: "ootb-supply-chain-testing-scanning"
-    #   secrets: 
-    #   - name: "ootb-supply-chain-overlay"
-    # - name: "ootb-templates"
-    #   secrets: 
-    #   - name: "ootb-template-overlay"  
 
     appliveview_connector:
       backend:
